testdata/baselines/reference/submodule/compiler/tsxNotUsingApparentTypeOfSFC.errors.txt
tsxNotUsingApparentTypeOfSFC.tsx(3,19): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== tsxNotUsingApparentTypeOfSFC.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from 'react';
                      ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    function test<P>(wrappedProps: P) {
        let MySFC = function(props: P) {
            return <>hello</>;
        };
        class MyComponent extends React.Component<P> {
            render() {
                return <>hello</>;
            }
        }
        let x = <MySFC />;  // should error
        let y = <MyComponent />;  // should error
    
        let z = <MySFC {...wrappedProps} /> // should work
        let q = <MyComponent {...wrappedProps} /> // should work
    }